--- a/CSS/1.css
+++ b/CSS/1.css
@@ -107,15 +107,20 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-}
-.session-lable {
+  }
+  
+  .session-lable {
     display: block;
     margin-bottom: 20px;
-}
-.session-date-block {
+    font-size: 16px;
+    line-height: 150%;
+  }
+  
+  .session-date-block {
     display: flex;
-}
-.session-date-item {
+  }
+  
+  .session-date-item {
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -128,35 +133,135 @@ body {
     justify-content: center;
     margin-right: 15px;
     transition: background-color 0.2s;
-}
-.session-item-month {
+  }
+  
+  .session-month {
     font-size: 16px;
     line-height: 19px;
-}
-.session-day{
+  }
+  
+  .session-day {
     font-weight: 900;
     font-size: 30px;
     line-height: 35px;
-}
-.session-week {
+  }
+  
+  .session-week {
     font-size: 19px;
     line-height: 22px;
-}
-.session-date-item:hover {
+  }
+  
+  .session-date-item:hover {
     background-color: #fe8e05;
-    color: #621402;
-}
-.select {
+    color: #222121;
+  }
+  
+  .select {
     background: rgba(255, 255, 255, 0.15);
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 5px;
-    color: white;
+    color: #fff;
     padding: 18px;
     cursor: pointer;
     margin-top: 15px;
-}
-.select-cinema {
-    min-width: 470px;
-}
-
+  }
+  
+  option {
+    color: #000;
+  }
+  
+  .select-cinema {
+    width: 470px;
+  }
+  
+  .scheme {
+    margin-bottom: 40px;
+    background: rgba(36, 36, 36, 0.18);
+    border-radius: 10px;
+    text-align: center;
+  }
+  
+  scheme-svg {
+    max-width: 1170px;
+    text-align: center;
+  }
+  
+  .scheme path:not(.light) {
+    fill: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+  }
+  
+  .scheme path:not(.light):hover {
+    fill: rgba(255, 255, 255, 0.5);
+  }
+  
+  .scheme path.booked,
+  .scheme path.booked:hover {
+    fill: rgba(255, 255, 255, 0.05);
+    cursor: not-allowed;
+  }
+  
+  .scheme path.active:not(.light),
+  .scheme path.active:hover:not(.light) {
+    fill: #fe8e05;
+    cursor: default;
+  }
+  
+  .scheme path.free,
+  .scheme path.free:hover {
+    fill: rgba(255, 255, 255, 0.2);
+    cursor: not-allowed;
+  }
+  
+  .legend {
+    display: flex;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    max-width: 1024px;
+    margin: auto;
+    padding-top: 22px;
+    padding-bottom: 38px;
+  }
+  
+  .legend-lable {
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  
+  .legend svg {
+    margin-right: 15px;
+  }
+  
+  .price {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .price-lable {
+    display: block;
+    font-size: 18px;
+    line-height: 21px;
+  }
+  
+  .price-tag {
+    font-size: 52px;
+    line-height: 61px;
+  }
+  
+  .button {
+    display: block;
+    padding: 24px 52px;
+    background: #fe8e05;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    text-decoration: none;
+  }
 
